<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main_page"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/title_main_page" />

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:titleCondensed="@drawable/search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_cart"
        android:enabled="true"
        android:titleCondensed="@drawable/cart"
        android:icon="@drawable/cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_account"
        android:enabled="true"
        android:icon="@drawable/account"
        android:title="@string/title_user_page" />

</menu>