<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main_page">

    <fragment
        android:id="@+id/navigation_main_page"
        android:name="ru.assignment.foodorder.ui.MainPageFragment"
        android:label="@string/title_main_page"
        tools:layout="@layout/fragment_main_page" >
        <action
            android:id="@+id/action_navigation_main_page_to_dishFragment"
            app:destination="@id/dishFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="ru.assignment.foodorder.ui.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="ru.assignment.foodorder.ui.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_navigation_main_page"
            app:destination="@id/navigation_main_page" />
    </fragment>
    <fragment
        android:id="@+id/dishFragment"
        android:name="ru.assignment.foodorder.ui.DishesFragment"
        android:label="DishFragment" >
        <action
            android:id="@+id/action_dishFragment_to_dishFragment2"
            app:destination="@id/dishFragment2" />
    </fragment>
    <dialog
        android:id="@+id/dishFragment2"
        android:name="ru.assignment.foodorder.ui.DishFragment"
        android:label="DishFragment" >
        <action
            android:id="@+id/action_dishFragment2_to_dishFragment"
            app:destination="@id/dishFragment" />
    </dialog>
</navigation>