<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.DishesFragment">

        <View
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:background="#F8F7F5"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toBottomOf="@+id/dishImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close"
            style="@style/close_favorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:iconSize="16dp"
            app:iconGravity="textTop"
            app:backgroundTint="@color/white"
            app:icon="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/favorite"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dishImage"
            android:layout_width="198dp"
            android:layout_height="204dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@sample/dish.json/dish/image_url" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favorite"
            style="@style/close_favorite"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="56dp"
            app:iconGravity="textTop"
            app:backgroundTint="@color/white"
            app:icon="@drawable/baseline_favorite_border_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="-2sp"
            android:maxLines="2"
            android:textAppearance="@style/heading_letters"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/background"
            tools:text="@sample/dish.json/dish/name" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/heading_letters"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dishName"
            tools:text="@sample/dish.json/dish/price" />

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textAppearance="@style/heading_letters"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/price"
            app:layout_constraintTop_toBottomOf="@id/dishName" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/small_letters"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/money"
            app:layout_constraintTop_toBottomOf="@id/dishName"
            tools:text="@sample/dish.json/dish/weight" />

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textAppearance="@style/small_letters"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/weight"
            app:layout_constraintTop_toBottomOf="@id/dishName" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/description"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price"
            tools:text="@sample/dish.json/dish/description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/description_add_to_cart"
            android:text="@string/description_add_to_cart"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
